# naoqi-nao-development

./: README.md
docs/: c-plus-plus-module-execution-and-linux-building.md  communicating-with-robot-unix.md  setting-up-for-windows.md  setting-up-sdk-for-cpp.md
face/: CMakeLists.txt  main.cpp  onfacedetection.cpp  onfacedetection.h  qiproject.xml
face/build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
face/build-mac/sdk/: qitest.json
face/build-mac/sdk/share/qi/: path.conf
hello/: CMakeLists.txt  main.cpp  qiproject.xml
hello/build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
hello/build-mac/sdk/: qitest.json
hello/build-mac/sdk/test-results/: test_hello.xml
video/: CMakeLists.txt  main.cpp  qiproject.xml  videocapture.cpp  videocapture.h
video/build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
video/build-mac/sdk/: qitest.json
video/build-mac/sdk/share/qi/: path.conf
